--- a/.travis.yml
+++ b/.travis.yml
@@ -1,5 +1,10 @@
 sudo: false
 language: ruby
 rvm:
-  - 2.4.0
+  - 2.4
+  - 2.3
+  - 2.2
+gemfile:
+  - gemfiles/activerecord-5-0.gemfile
+  - gemfiles/activerecord-4-2.gemfile
 before_install: gem install bundler -v 1.14.6
