Fix Travis CI failure of SQLite builds by upgrading SQLite
Add note to README about database support

--- a/.travis.yml
+++ b/.travis.yml
@@ -16,3 +16,10 @@ before_install:
   - gem install bundler -v 1.14.6
   - bundle install
   - appraisal install
+
+addons:
+  apt:
+    sources:
+      - travis-ci/sqlite3
+    packages:
+      - sqlite3
