--- a/.travis.yml
+++ b/.travis.yml
@@ -25,4 +25,5 @@ matrix:
       env: "DB=postgresql"
     - rvm: 2.3.4
       gemfile: gemfiles/activerecord_4_2.gemfile
-      env: "DB=mysql"
+      env: "DB=sqlite"
+    # Please note that gem can't be tested against MySQL on ActiveRecord 4.2 (Dump and restore test doesn't work)!
