Update Ruby versions to latest and Travis build env to Xenial
See: https://docs.travis-ci.com/user/reference/xenial/

--- a/.travis.yml
+++ b/.travis.yml
@@ -1,56 +1,64 @@
+dist: xenial
+language: ruby
 cache: bundler
 sudo: false
-language: ruby
 
 addons:
+  postgresql: "10"
   apt:
     sources:
       - travis-ci/sqlite3
     packages:
       - sqlite3
 
+services:
+  - mysql
+  - postgresql
+
+before_install: gem install bundler -v '~> 1.17'
+
 matrix:
   include:
-    - rvm: 2.5.0
+    - rvm: 2.6.0
       gemfile: gemfiles/activerecord_master.gemfile
       env: "DB=sqlite"
-    - rvm: 2.5.0
+    - rvm: 2.6.0
       gemfile: gemfiles/activerecord_master.gemfile
       env: "DB=postgresql"
-    - rvm: 2.5.0
+    - rvm: 2.6.0
       gemfile: gemfiles/activerecord_master.gemfile
       env: "DB=mysql"
-    - rvm: 2.5.0
+    - rvm: 2.6.0
       gemfile: gemfiles/activerecord_5_2.gemfile
       env: "DB=sqlite"
-    - rvm: 2.5.0
+    - rvm: 2.6.0
       gemfile: gemfiles/activerecord_5_2.gemfile
       env: "DB=postgresql"
-    - rvm: 2.5.0
+    - rvm: 2.6.0
       gemfile: gemfiles/activerecord_5_2.gemfile
       env: "DB=mysql"
-    - rvm: 2.5.0
+    - rvm: 2.5.3
       gemfile: gemfiles/activerecord_5_1.gemfile
       env: "DB=sqlite"
-    - rvm: 2.5.0
+    - rvm: 2.5.3
       gemfile: gemfiles/activerecord_5_1.gemfile
       env: "DB=postgresql"
-    - rvm: 2.5.0
+    - rvm: 2.5.3
       gemfile: gemfiles/activerecord_5_1.gemfile
       env: "DB=mysql"
-    - rvm: 2.4.3
+    - rvm: 2.4.5
       gemfile: gemfiles/activerecord_5_0.gemfile
       env: "DB=sqlite"
-    - rvm: 2.4.3
+    - rvm: 2.4.5
       gemfile: gemfiles/activerecord_5_0.gemfile
       env: "DB=postgresql"
-    - rvm: 2.4.3
+    - rvm: 2.4.5
       gemfile: gemfiles/activerecord_5_0.gemfile
       env: "DB=mysql"
-    - rvm: 2.3.6
+    - rvm: 2.3.8
       gemfile: gemfiles/activerecord_4_2.gemfile
       env: "DB=postgresql"
-    - rvm: 2.3.6
+    - rvm: 2.3.8
       gemfile: gemfiles/activerecord_4_2.gemfile
       env: "DB=sqlite"
     # Please note that gem can't be tested against MySQL on ActiveRecord 4.2 (Dump and restore test doesn't work)!
