--- a/.travis.yml
+++ b/.travis.yml
@@ -28,6 +28,15 @@ matrix:
     - rvm: 2.6.0
       gemfile: gemfiles/activerecord_master.gemfile
       env: "DB=mysql"
+    - rvm: jruby-9.2.5.0
+      gemfile: gemfiles/activerecord_5_2.gemfile
+      env: "DB=sqlite"
+    - rvm: jruby-9.2.5.0
+      gemfile: gemfiles/activerecord_5_2.gemfile
+      env: "DB=postgresql"
+    - rvm: jruby-9.2.5.0
+      gemfile: gemfiles/activerecord_5_2.gemfile
+      env: "DB=mysql"
     - rvm: 2.6.0
       gemfile: gemfiles/activerecord_5_2.gemfile
       env: "DB=sqlite"
@@ -59,6 +68,12 @@ matrix:
       gemfile: gemfiles/activerecord_4_2.gemfile
       env: "DB=postgresql"
     - rvm: 2.3.8
+      gemfile: gemfiles/activerecord_4_2.gemfile
+      env: "DB=sqlite"
+    - rvm: jruby-9.2.5.0
+      gemfile: gemfiles/activerecord_4_2.gemfile
+      env: "DB=postgresql"
+    - rvm: jruby-9.2.5.0
       gemfile: gemfiles/activerecord_4_2.gemfile
       env: "DB=sqlite"
     # Please note that gem can't be tested against MySQL on ActiveRecord 4.2 (Dump and restore test doesn't work)!
