--- a/.github/workflows/test.yml
+++ b/.github/workflows/test.yml
@@ -19,22 +19,40 @@ jobs:
           - ruby: "head"
             activerecord: "head"
             database: sqlite
+          - ruby: "3.4"
+            activerecord: "8.0"
+            database: postgresql
+          - ruby: "3.4"
+            activerecord: "8.0"
+            database: mysql
+          - ruby: "3.4"
+            activerecord: "8.0"
+            database: sqlite
           - ruby: "3.3"
-            activerecord: "7.1"
+            activerecord: "7.2"
             database: postgresql
           - ruby: "3.3"
-            activerecord: "7.1"
+            activerecord: "7.2"
             database: mysql
           - ruby: "3.3"
-            activerecord: "7.1"
+            activerecord: "7.2"
             database: sqlite
           - ruby: "3.2"
-            activerecord: "7.0"
+            activerecord: "7.1"
+            database: postgresql
+          - ruby: "3.2"
+            activerecord: "7.1"
+            database: mysql
+          - ruby: "3.2"
+            activerecord: "7.1"
             database: sqlite
           - ruby: "3.1"
-            activerecord: "6.1"
+            activerecord: "7.0"
             database: sqlite
           - ruby: "3.0"
+            activerecord: "6.1"
+            database: sqlite
+          - ruby: "2.7"
             activerecord: "6.0"
             database: sqlite
 
@@ -42,7 +60,7 @@ jobs:
 
     services:
       postgres:
-        image: postgres:16
+        image: ${{ (matrix.database == 'postgresql') && 'postgres:17' || '' }}
         env:
           POSTGRES_USER: postgres
           POSTGRES_PASSWORD: postgres
@@ -54,7 +72,7 @@ jobs:
           --health-timeout 5s
           --health-retries 5
       mysql:
-        image: mysql:8.4
+        image: ${{ (matrix.database == 'mysql') && 'mysql:9' || '' }}
         env:
           MYSQL_ALLOW_EMPTY_PASSWORD: yes
           MYSQL_DATABASE: evil_seed_test
